--- a/public/css/Style_Cad.css
+++ b/public/css/Style_Cad.css
@@ -9,29 +9,39 @@ body, html {
     color: #333;
 }
 
+main {
+    transition: background-color 0.5s ease;
+}
+
 .trilho { 
-    display: flex;
     width: 90px;
     height: 40px;
     background-color: black;
-    border-radius: 50px 50px;
-    margin-left: 90%;
-    margin-top: -5%;
-    position: relative;
+    border-radius: 50px;
+    position: fixed; 
+    top: 20px;      
+    right: 20px;     
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 5px; 
+    transition: background-color 0.5s ease;
+    z-index: 1000;
+    box-sizing: border-box;
 }
 
 .trilho .indicador { 
-    width: 35px;
-    height: 35px;
+    width: 33px;
+    height: 33px;
     background-color: white;
     border-radius: 50%;
-    margin: 2.5px;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
-    transition: transform 0.3s ease; 
     position: absolute;
-    left: 0;
-    transition: 0.5s;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    transition: left 0.5s ease, background-color 0.5s ease;
 }
 
 .trilho.dark {
@@ -39,13 +49,16 @@ body, html {
 }
 
 .trilho.dark .indicador {
-    left: 49px;
+    left: 50px;
+    width: 38px;
+    height: 38px;
     background-color: rgb(0, 0, 0);
 }
 
 main.dark {
     background-color: #121212;
     color: white;
+    transition: background-color 0.5s ease;
 }
 
 main.dark h1 {
